[package]
name = "poortal-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
env_logger = "0.11.10"
glam = "0.32.1"
log = "0.4.29"
softbuffer = "0.4.8"
winit = "0.30.13"

[profile.dev]
opt-level = 1
overflow-checks = false
incremental = true

[profile.dev.package."*"]
opt-level = 3
